src/scss/survey.scss
body {
    --answer-highlight-box-color: #E2EDFF;
}

@font-face {
    font-family: 'ApercuPro';
    font-weight: normal;
    src: url("../../assets/fonts/Apercu-Font/Apercu\ Pro\ Regular.otf") format("opentype");
}
@font-face {
    font-family: ApercuPro;
    font-weight: bold;
    src: url("../../assets/fonts/Apercu-Font/Apercu\ Pro\ Bold.otf") format("opentype");
}

@font-face {
    font-family: ApercuPro;
    font-weight: 500;
    src: url("../../assets/fonts/Apercu-Font/Apercu\ Pro\ Medium.otf") format("opentype");
}
.tab-list{
    border-radius: 12px;
    width: 100%;
    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
    .tab-container{
        .tab{
            h3{
                margin: 0;
            }
            p{
                margin: 27px 0;
            }
            input{
                word-wrap: break-word
            }
            button{
                background-color: #0F4C81;
                border: none;
                color: white;
                padding: 12px 28px;
                text-align: center;
                text-decoration: none;
                display: inline-block;
                font-size: 16px;
                margin: 4px 2px;
                cursor: pointer;
                border-radius: 9px;
            }
            .wpsf-tab-CoverPage, .wpsf-tab-ResultScreen{
                text-align: center;
            }
        }
    }
}
.wpsf-tab-CoverPage, .wpsf-tab-ResultScreen, .wpsf-tab-SingleChoice, .wpsf-tab-MultiChoice, .wpsf-tab-FormElements{
    border-radius: 12px;
    width: 100%;
}
.wpsf-tab-CoverPage, .wpsf-tab-ResultScreen{
    display:flex;
    justify-content: center;
    align-items: center;
    text-align: center;

    min-height: 450px;
    padding: 40px;
    .tab-container{
        .tab{
            h3{
                max-width: 100%;
                word-break: break-word;
            }
            p{
                max-width: 100%;
                word-break: break-word;
            }
            button{
                max-width:300px;
                word-break: break-word;
            }
        }
    }

}
.wpsf-tab-SingleChoice, .wpsf-tab-MultiChoice{
    padding: 40px;

    max-width: 80%;
    .tab-container{
        .tab{
            h3{
                margin-bottom: 20px;
                max-width: 100%;
                word-break: break-word;
            }
            p{
                margin:0 0 20px 0;
                max-width: 100%;
                word-break: break-word;

            }
            button{
                max-width: 300px;
                word-break: break-word;
            }
            .wpsf-tab-answer-container{
                border: 1px solid #0F4C81;
                border-radius: 9px;
                margin-bottom: 5px;
        
                label{
                    display: flex;
                    align-items: center;
                    display: flex;
                    align-items: center;
                    min-height: 76px;
                    width: 100%;
                    cursor: pointer;
                    border-radius: 9px;
                    div{
                        min-height: 54px;
                        margin: 10px;
                        min-width: 54px;
                        background-color: #F0F2F5;
                        border-radius: 9px;
                        display: flex;
                        align-items: center;
                        justify-content: center;
                    }
                    p{
                        padding: 20px 30px 0 10px;
                    }
                }

                input{
                    display: none;
                }
                input:checked + label{
                    background-color: var(--answer-highlight-box-color);
                }
                input:checked + label div{
                    background-color: white;
                }
                input:hover + label{
                    background-color: var(--answer-highlight-box-color);
                }
                input:hover + label div{
                    background-color: white;
                }
            }
        }
    }
    
}
.wpsf-tab-FormElements{
    padding: 40px;

    max-width: 80%;
    
    .tab-container{
        .tab{
            h3{
                margin-bottom: 20px;
                max-width: 100%;
                word-break: break-word;
            }
            p{
                margin:0 0 20px 0;
                max-width: 100%;
                word-break: break-word;
            }
            label{
                display: block;
                max-width: 100%;
                word-break: break-word;
            }
            textarea{
                
            border: 1px solid rgba(181, 220, 255, 0.58);
            width: 100%;
            height: 80px;
            border-radius: 9px;
            margin: 10px 0;
            word-break: break-word;
            outline:none;
            }
            input{
                border: 1px solid rgba(181, 220, 255, 0.58);
                width: 100%;
                height: 40px;
                border-radius: 9px;
                margin: 10px 0;
                word-break: break-word;
                outline:none;
            }
            .wpsf-form-submit-button{
                display: flex;
                justify-content: center;
                button{
                    max-width: 300px;
                    word-break: break-word;
                }
            }

        }
    }

}

.wpsf-design-preview-container{
    .wpsf-survey-form{
        display: flex;
        justify-content: center;
        overflow: auto;
        height: calc(100vh - 108px);
        .wpsf-design-preview-container{
            width: 100%;
            .preview{
                height: 100%;
                display: flex;
                flex-direction: column;
                justify-content: center;
                .tab-list{
                    display: flex;
                    justify-content: center;
                    align-items: center;
                    width: 100%;
                }
            }
        }
        .tab-controls{
            display: flex;
            align-items: center;
            justify-content: flex-end;
            margin-top: 20px;
            button{
                background-color: #F0F2F5;
                border: 1px solid #d2dae2;
                color: #60554F;
                padding: 8px 15px;
                text-align: center;
                text-decoration: none;
                display: inline-block;
                font-size: 16px;
                margin: 4px 2px;
                cursor: pointer;
                border-radius: 9px;
            }
            button:disabled{
                opacity: 0.7;
                background-color: #FFFFFF;
            }
        }
        .no-preview-available{
            display: flex;
            justify-content: center;
            align-items: center;
            flex-direction: column;
            img{
                margin-bottom: 20px;
            }
        }

    }

}

